--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Briiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<!DOCTYPE html>
-<html lang="en">
+
+<body>
+    <header> 
+<ul>
+<li><a href="a">Home Cleaning+</a></li>
+<li><a href="a">Car Cleaning</a></li>
+<li><a href="a">For your Buisness+</a></li>
+<li><a href="a">Air Conditioner Cleaning</a></li>
+<li><a href="a">Book Now</a></li>
+</ul>
+
+    </header>
+</body>
 
