added background image

--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
     <title>Briiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header> 
-<ul>
-<li><a href="a">Home Cleaning+</a></li>
-<li><a href="a">Car Cleaning</a></li>
-<li><a href="a">For your Buisness+</a></li>
-<li><a href="a">Air Conditioner Cleaning</a></li>
-<li><a href="a">Book Now</a></li>
-</ul>
+ <section id="banner">
 
-    </header>
-</body>
-
+ </section>
+    </body>
+</html>
