--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
  <section id="banner">
+<img src="images/navbarlogo.png" class="logo"
 
- </section>
+
+
+
+ </section> 
     </body>
 </html>
