--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Briiz</title>
     <link rel="stylesheet" href="style.css">
-
+<meta name="viewport" content="width =device-width, initial-scale =1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
@@ -23,46 +25,54 @@
 
 </div>
 </section>
-<div id="sideNav"> 
-    <nav>
-<ul>
-<li><a href="#">Home Cleaning+</a>
-    <li><a href="#">Car Cleaning</a>
-        <li><a href="#">For Your Buisness+</a>
-            <li><a href="#">Air Conditioner Cleaning</a>
-                <li><a href="#">Book Now</a>  
+<div id ="sideNav">
+<nav>
+    <ul>
+<li><a href="#">Home Cleaning+</a></li>
+<li><a href="#">Car Cleaning</a></li>
+<li><a href="#">For Your Buisness+</a></li>
+<li><a href="#">Air Conditioner Cleaning</a></li>
+<li><a href="#">Book Now</a></li>
+</nav>
 </ul>
 
 
-    </nav>
+</div>
 
 
 </div>
 <div id="menuBtn">
-    <img src="images/Menu icon.svg" id="Menu">
+<img src="images/Menu icon.svg" id="Menu">
 </div>
+
+<!--Features-->
+<section id="features">
+<div class = "title-text">
+<h1>Our Home Cleaning Service</h1>
+<p>With Briiz you can choose for us to clean whatever you want within your household. Simply choose the time package you want, and we’ll be right there to assist you in anything that needs cleaning.</p>
+</div>
+
+
+
+
+
+
+</section>
+
 <script>
-var menuBtn =document.getElementById("menuBtn")
-var sideNav =document.getElementById("sideNav")
-var Menu =document.getElementById("menu")
-
-menuBtn.oneclick=function (){
+var menuBtn = document.getElementById("menuBtn")
+var sideNav = document.getElementById("sideNav")
+var menu = document.getElementById("menu")
+sideNav.style.right == "-250px";
+menuBtn.oneclick = function (){
 if(sideNav.style.right == "-250px"){
-    sideNav.style.right = "0";
+   sideNav.style.right = "0";
 }
-
 else{
-sideNav.style.right= "-250px";
+sideNav.style.right = "-250px";
 }
-
-
-
-
 }
 </script>
-
-
-
-
- </body>
+</div>
+</body>
 </html>
